infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: commerce
  labels:
    name: commerce
    environment: production
